# mercury

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LANGUAGE_COMPARISON.md  MERCURY_DIVERGENCE_PLAN.md  MERCURY_GO_REWRITE_ASSESSMENT.md  MERCURY_GO_WIKI.md  README.md  SECURITY.md  SUMMER_COURSE_PLAN.md  cli-config.yaml.example  cli.py  docker-compose.yml  hermes-already-has-routines.md  mcp_serve.py  mercury-already-has-routines.md  mercury_constants.py  mercury_logging.py  mercury_state.py  mercury_time.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rl_cli.py  run_agent.py  setup-hermes.sh  toolsets.py  trajectory_compressor.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: openai-api-server.md  streaming-support.md
agent/: account_usage.py  anthropic_adapter.py  auxiliary_client.py  brain_client.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  display.py  error_classifier.py  file_safety.py  gemini_native_adapter.py  gemini_schema.py  google_oauth.py  gpu_coordinator.py  image_gen_provider.py  image_gen_registry.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  prompt_builder.py  reasoning_mode.py  redact.py  shell_hooks.py  skill_commands.py  skill_preprocessing.py  skill_utils.py  tenancy.py
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
docker/: SOUL.md  entrypoint.sh
docs/: ARCHITECTURE.md  BRAIN_CONTAINER.md  CLOUD_FAILOVER.md  DISCORD_BOT_SETUP.md  EXTERNAL_LIMITS.md  FINANCIAL_BREAKDOWN.md  NOUS_HACKATHON.md  OPERATIONS.md  PROFESSOR_BHATTACHARYA.md  SUBMISSION_BUNDLE.md  architecture_evolution.md  index.html  tweets-hackathon-close.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  mercury_base_env.py  patches.py  tool_context.py  web_research_env.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  external_limits.py  external_logging.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  session.py  session_context.py  status.py  sticker_cache.py  whatsapp_identity.py
gcp/: Dockerfile.brain  Dockerfile.mercury-cloud  cloud-run-brain.yaml  cloud-run-mercury.yaml  scheduled-warm-ping.yaml
kimi_proof/: 01_kimi_dispatch.py  03_mercury_kimi_commits.txt  05_config_with_kimi_default.yaml  07_kimi_spend_window_commits.txt
mercury/: __init__.py  copilot_models.py  cortex_bridge.py  genai_client.py  hermes  mcp_extensions.py  router.py  tailscale.py
mercury-fast/: Cargo.toml  README.md
mercury-fast/python/: mercury_fast_compat.py
mercury-fast/src/: lib.rs
mercury-web/: .dockerignore  Dockerfile  README.md  cloudrun.yaml  index.html  package-lock.json  package.json  vite.config.ts
mercury.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mercury_cli/: __init__.py  auth.py  auth_commands.py  backup.py  banner.py  callbacks.py  claw.py  cli_output.py  clipboard.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curses_ui.py  debug.py  default_soul.py  doctor.py  dump.py  env_loader.py  gateway.py  hooks.py  logs.py  main.py  mcp_config.py  memory_setup.py  mercury_routes.py  model_normalize.py  model_switch.py  models.py  nous_subscription.py  oneshot.py  pairing.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  pty_bridge.py  (+13 more)
optional-skills/: DESCRIPTION.md
plans/: gemini-oauth-provider.md  voxel_brain_upgrade.md
plugins/: __init__.py
scripts/: HERMES_LOCAL_WIRING.md  MAC_EXTRACTION_STEP_BY_STEP.md  MERCURY_LOCAL_WIRING.md  RUN_ON_MAC_extract.sh  build_skills_index.py  discord-voice-doctor.py  e2e_smoke.py  extract_miniapple.sh  fetch_nasa_artemis.py  gcloud_bootstrap.sh  install.cmd  install.ps1  install.sh  isolate_kimi_authorship.sh  mcp_config_template.yaml  mercury-gateway  miniapple_preflight.md  post_scan_resume_regen.sh  prepare_demo_clip.sh  profile_mercury.py  regen_then_train.sh  rename_to_mercury.py  run_tests.sh  sample_and_compress.py
tests/: conftest.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_hermes_constants.py  test_hermes_logging.py  test_hermes_state.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_model_tools.py  test_plugin_skills.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_transform_tool_result_hook.py  test_tui_gateway_server.py  test_utils_truthy_values.py
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  discord_tool.py  env_passthrough.py  file_operations.py  file_state.py  file_tools.py  firecrawl_tool.py  google_search.py  google_services.py  image_generation_tool.py  interrupt.py  kimi_dispatch.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  mercury_debug.py  openrouter_client.py  osv_check.py  process_registry.py  registry.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  (+16 more)
tui_gateway/: entry.py  event_publisher.py  server.py  slash_worker.py  transport.py
ui-tui/: README.md  eslint.config.mjs  package.json  (+2 more)
(+1285 files in other folders)
