[package]
name = "mercury-fast"
version = "0.1.0"
edition = "2021"
authors = ["Soumit Lahiri <soumitlahiri@philanthropytraders.com>"]
description = "Performance-critical Mercury hot paths in Rust, exposed to Python via PyO3."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexiosBluffMara/mercury"

[lib]
name = "mercury_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.22", features = ["extension-module", "abi3-py39"] }
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
ahash  = "0.8"

# Token-bucket / SSE chunk parser. Rust regex is materially faster than Python
# re for the hot streaming-chunk paths we want to lift out.
regex      = "1"
once_cell  = "1"
memchr     = "2"

# Token counting (drop-in tiktoken for the compressor hot loop)
# tiktoken-rs pulls fancy_regex (slower start; cached)
tiktoken-rs = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
